# rp2040-doom-picohero

./: README.md
opl/: CMakeLists.txt  opl_pico.c
src/: CMakeLists.txt  i_main.c
src/pico/: CMakeLists.txt  controls.c  controls.h  i_input.c  i_picosound.c  i_video.c  piconet.c
src/pico/pico-screens/: screen.c
src/pico/pico-screens/screens/: ili9341_mcu_if.c  ili9341_mcu_if.h  st7789_mcu_if.c  st7789_mcu_if.h
src/pico_ili9341_mcu/: CMakeLists.txt
src/pico_ili9341_mcu/src/: ili9341_mcu.c
src/pico_ili9341_mcu/src/include/pico/: ili9341_hwcfg.h  ili9341_mcu.h  lcd_pio16.h
uf2/: 240515_doom_tiny_ILI9341_MCU.uf2  240515_doom_tiny_nost_ILI9341_MCU.uf2
